--- a/line-ending-converter/line-ending-converter.vcxproj
+++ b/line-ending-converter/line-ending-converter.vcxproj
@@ -127,7 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="arg_parser.c" />
+    <ClCompile Include="file_utils.c" />
+    <ClCompile Include="line_ending_converter.c" />
     <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="arg_parser.h" />
+    <ClInclude Include="file_utils.h" />
+    <ClInclude Include="line_ending_converter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
