--- a/line-ending-converter/line-ending-converter.vcxproj.filters
+++ b/line-ending-converter/line-ending-converter.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="line_ending_converter.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="file_processor.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arg_parser.h">
@@ -36,6 +39,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="line_ending_converter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="file_processor.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
