--- a/line-ending-converter/line-ending-converter.vcxproj
+++ b/line-ending-converter/line-ending-converter.vcxproj
@@ -101,7 +101,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
@@ -132,12 +132,14 @@
     <ClCompile Include="file_utils.c" />
     <ClCompile Include="line_ending_converter.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="platform_utils.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arg_parser.h" />
     <ClInclude Include="file_processor.h" />
     <ClInclude Include="file_utils.h" />
     <ClInclude Include="line_ending_converter.h" />
+    <ClInclude Include="platform_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
